--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>你好，GitHub</title>
   </head>
   <body>
-    <img src="EnSkOr6VgAAjiCl.jfif">
+    <img src="mf3Pe8.jpg">
     <h1>覺得厲害</h1>
   </body>
 </html>
