--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" media="screen" href="style.css">
-    <title>你好，GitHub</title>
+    <title>20032537d_FungTsunHin_midproject</title>
   </head>
   <body>
-    <img src="mf3Pe8.jpg">
-    <h1>覺得厲害</h1>
+    <h1>COMP 3421 Mid Project</h1>
   </body>
 </html>
