--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>COMP 3421 Mid Project</h1>
+    <p>Name: Fung Tsun Hin</p>
+    <p>Student ID: 20032537d</p>
+    
   </body>
 </html>
