--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>COMP 3421 Mid Project</h1>
     <p>Name: Fung Tsun Hin</p>
     <p>Student ID: 20032537d</p>
+    <img src="Sea_Turtle.jpg" alt="My picture">
     
   </body>
 </html>
