--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>COMP 3421 Mid Project</h1>
     <p>Name: Fung Tsun Hin</p>
     <p>Student ID: 20032537d</p>
-    <img src="Sea_Turtle.jpg" alt="My picture">
-    
+    <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
+    <map name="turtlevideo">
+    <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic">
   </body>
 </html>
