--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
     <map name="turtlevideo">
     <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic">
+    <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture above.</a>
   </body>
 </html>
