--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
     <map name="turtlevideo">
     <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic">
-    <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture above.</a>
+    <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture on the left.</a>
+    <h1>Introduction</h1>
+    <p>My name is Fung Tsun Hin. I am a year 3 student of Department of Applied Mathematics. <b>I am studing <q>Bachelor of science in Data Science and Analytics</q>.</b> On the above, you can see a turtle picture and video that is my favourite animal. </p>
   </body>
 </html>
