--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic">
     <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture on the left.</a>
     <h1>Introduction</h1>
-    <p>My name is Fung Tsun Hin. I am a year 3 student of Department of Applied Mathematics. <b>I am studing <q>Bachelor of science in Data Science and Analytics</q>.</b> I choose COMP 3421 to study because I am quite like coding and want to know more Web development.
-      On the above, you can see a turtle picture and video that is my favourite animal. </p>
+      <p>My name is Fung Tsun Hin. I am a year 3 student of <i>Department of Applied Mathematics</i>. <b>I am studing <q>Bachelor of science in Data Science and Analytics</q>.</b> I choose <mark>COMP 3421</mark> to study because I am quite like coding and want to know more Web development.
+        Also, I have studied different programming language before, like <mark>C++, python, R, etc</mark>. Let's talk about topics not related to learning. On the above, you can see a <ins>turtle picture and video</ins> that is my favourite animal. </p>
   </body>
 </html>
