--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Also, I have studied different programming language before, like <mark>C++, python, R, etc</mark>. Let's talk about topics not related to learning. On the above, you can see a <ins>turtle picture and video</ins> that is my favourite animal. Also, I love watching anime. There is some anime that i love. I will show it below in a list.</p>
     <h2>My favourite anime list:<h2>
     <ul>
-      <li>Your lie in April</li>
+      <li><a href="https://en.wikipedia.org/wiki/Your_Lie_in_April" target="_blank">Your lie in April</a></li>
       <li>Accel World</li>
       <li>My Hero Academia</li>
       <li>Attack on Titan</li>
