--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h2>My favourite anime list:<h2>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Your_Lie_in_April" target="_blank">Your lie in April</a></li>
-      <li>Accel World</li>
-      <li>My Hero Academia</li>
-      <li>Attack on Titan</li>
+      <li><a href="https://en.wikipedia.org/wiki/Accel_World" target="_blank">Accel World</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/My_Hero_Academia" target="_blank">My Hero Academia</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank">Attack on Titan</a></li>
     </ul>
   </body>
 </html>
