--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
       <li><a href="https://en.wikipedia.org/wiki/My_Hero_Academia" target="_blank">My Hero Academia</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank">Attack on Titan</a></li>
     </ul>
+      <p>If you are interesting in this, you can click it to get more information on the wikipedia.</p>
   </body>
 </html>
