--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
       <li><a href="https://en.wikipedia.org/wiki/My_Hero_Academia" target="_blank">My Hero Academia</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank">Attack on Titan</a></li>
     </ul>
-      <p>If you are interesting in this, you can click it to get more information on the wikipedia.</p>
+    <p><mark>If you are interesting in this, you can click it to get more information on the wikipedia.<mark></p>
+    <h1>My Timetable 2020-2021 Semester 2</h1>
+    <table>
+    <tr>
+      <td>Time</td>
+      <td>Monday</td>
+      <td>Tuesday</td>
+      <td>Wednesday</td>
+      <td>Thursday</td>
+      <td>Friday</td>
+    </tr>
+    </table>
   </body>
 </html>
