--- a/index.html
+++ b/index.html
@@ -35,6 +35,145 @@
       <td>Thursday</td>
       <td>Friday</td>
     </tr>
+    <tr>
+      <td>0830-0900</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+     <td>0900-0930</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+     <td>0930-1000</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td rowspan="4">COMP 3421 L</td>
+     <td></td>
+    </tr>
+    <tr>
+     <td>1000-1030</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+      <td>1030-1100</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td rowspan="2">COMP 3421 T</td>
+    </tr>
+     <tr>
+       <td>1100-1130</td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+      <tr>
+        <td>1130-1200</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td rowspan="2">AMA 2222A T</td>
+        <td></td>
+      </tr>
+     <tr>
+       <td>1200-1230</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1230-1300</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1300-1330</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1330-1400</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1400-1430</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1430-1500</td>
+       <td rowspan="4">ELC 3124</td>
+       <td></td>
+       <td></td>
+       <td rowspan="6">AAE1B01</td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1500-1530</td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1530-1600</td>
+       <td rowspan="6">COMP3134</td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1600-1630</td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1630-1700</td>
+       <td></td>
+       <td></td>
+       <td rowspan="4">AMA 2222A L</td>
+      </tr>
+     <tr>
+       <td>1700-1730</td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1730-1800</td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
+     <tr>
+       <td>1800-1830</td>
+       <td></td>
+       <td></td>
+       <td></td>
+      </tr>
     </table>
   </body>
 </html>
