--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
     <h1>COMP 3421 Mid Project</h1>
     <p>Name: Fung Tsun Hin</p>
     <p>Student ID: 20032537d</p>
+    <p>Shortcut</p>
+    <a href="#Photo">Photo</a>
+    <a href="#Introduction">Introduction</a>
+    <a href="#Anime List">Anime List</a>
+    <a href="#Timetable"> My Time Table</a>
+    <a name="Photo">
+    <h1>Photo</h1>
     <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
     <map name="turtlevideo">
     <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic">
     <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture on the left.</a>
+    <a name="Introduction">
     <h1>Introduction</h1>
     <p>My name is Fung Tsun Hin. I am a year 3 student of <i>Department of Applied Mathematics</i>. <b>I am studing <q>Bachelor of science in Data Science and Analytics</q>.</b> I choose <mark>COMP 3421</mark> to study because I am quite like coding and want to know more Web development.
         Also, I have studied different programming language before, like <mark>C++, python, R, etc</mark>. Let's talk about topics not related to learning. On the above, you can see a <ins>turtle picture and video</ins> that is my favourite animal. Also, I love watching anime. There is some anime that i love. I will show it below in a list.</p>
-    <h2>My favourite anime list:<h2>
+    <a name="Anime List">
+    <h1>My favourite anime list:</h1>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Your_Lie_in_April" target="_blank">Your lie in April</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Accel_World" target="_blank">Accel World</a></li>
@@ -25,6 +34,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank">Attack on Titan</a></li>
     </ul>
     <p><mark>If you are interesting in this, you can click it to get more information on the wikipedia.<mark></p>
+    <a name="Timetable">
     <h1>My Timetable 2020-2021 Semester 2</h1>
     <table>
     <tr>
