--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <p>Name: Fung Tsun Hin</p>
     <p>Student ID: 20032537d</p>
     <p>Shortcut</p>
-    <a href="#Photo">Photo</a>
-    <a href="#Introduction">Introduction</a>
-    <a href="#Anime List">Anime List</a>
-    <a href="#Timetable"> My Time Table</a>
+    <a href="#Photo">Photo</a><br>
+    <a href="#Introduction">Introduction</a><br>
+    <a href="#Anime List">Anime List</a><br>
+    <a href="#Timetable"> My Time Table</a><br>
     <a name="Photo">
     <h1>Photo</h1>
     <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
