--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <h1>COMP 3421 Mid Project</h1>
     <p>Name: Fung Tsun Hin</p>
     <p>Student ID: 20032537d</p>
-    <p>Shortcut</p>
-    <a href="#Photo">Photo</a><br>
-    <a href="#Introduction">Introduction</a><br>
-    <a href="#Anime List">Anime List</a><br>
-    <a href="#Timetable"> My Time Table</a><br>
+    <h1><b>Shortcut:</b></h1>
+    <ol>
+      <li><a href="#Photo">Photo</a><br></li>
+      <li><a href="#Introduction">Introduction</a><br></li>
+      <li><a href="#Anime List">Anime List</a><br></li>
+      <li><a href="#Timetable"> My Time Table</a><br></li>
+    </ol>
     <a name="Photo">
     <h1>Photo</h1>
     <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
