--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <a name="Introduction">
     <h1>Introduction</h1>
     <p>My name is Fung Tsun Hin. I am a year 3 student of <i>Department of Applied Mathematics</i>. <b>I am studing <q>Bachelor of science in Data Science and Analytics</q>.</b> I choose <mark>COMP 3421</mark> to study because I am quite like coding and want to know more Web development.
-        Also, I have studied different programming language before, like <mark>C++, python, R, etc</mark>. Let's talk about topics not related to learning. On the above, you can see a <ins>turtle picture and video</ins> that is my favourite animal. Also, I love watching anime. There is some anime that i love. I will show it below in a list.</p>
+        Also, I have studied different programming language before, like <mark>C++, python, R, etc</mark>.</p> 
+      <p>Let's talk about topics not related to learning. On the above, you can see a <ins>turtle picture and video</ins> that is my favourite animal. Also, I love watching anime. There is some anime that i love. I will show it below in a list.</p>
     <a name="Anime List">
     <h1>My favourite anime list:</h1>
     <ul>
