--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="#Introduction">Introduction</a><br></li>
       <li><a href="#Anime List">Anime List</a><br></li>
       <li><a href="#Timetable"> My Time Table</a><br></li>
+      <li><a href="#Form">Form</a><br></li>
     </ol>
     <a name="Photo">
     <h1>Photo</h1>
@@ -188,5 +189,12 @@
        <td></td>
       </tr>
     </table>
+    <a name="Form">
+    <form action="/https://hin9852.github.io/" target="_blank" method="post">
+      <label for="wname">Please input your name:</label><br>
+      <input type="text" id="wname" name="wname"><br>
+      <input type="submit" value="Go to other page">
+      </form>
+      <p>After press the <q>Go to other page</q> button, you will go to onther page to do more question.</p>
   </body>
 </html>
