--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
        <td></td>
       </tr>
     </table>
+    <br>
     <a name="Form">
     <form action="/https://hin9852.github.io/" target="_blank" method="post">
-      <label for="wname">Please input your name:</label><br>
+      <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
       <input type="text" id="wname" name="wname"><br>
       <input type="submit" value="Go to other page">
       </form>
