--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </table>
     <br>
     <a name="Form">
-    <form action="/apple.html" target="_blank" method="post">
+    <form action="/apple" target="_blank" method="post">
       <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
       <input type="text" id="wname" name="wname"><br>
       <input type="submit" value="Go to other page">
