--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="#Introduction">Introduction</a><br></li>
       <li><a href="#Anime List">Anime List</a><br></li>
       <li><a href="#Timetable"> My Time Table</a><br></li>
-      <li><a href="#Form">Form</a><br></li>
+      <li><a href="#Form and Comments">Form and Comments</a><br></li>
     </ol>
     <a name="Photo">
     <h1>Photo</h1>
@@ -190,12 +190,7 @@
       </tr>
     </table>
     <br>
-    <a name="Form">
-    <form action="/apple" target="_blank" method="post">
-      <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
-      <input type="text" id="wname" name="wname"><br>
-      <input type="submit" value="Go to other page">
-      </form>
-      <p>After press the <q>Go to other page</q> button, you will go to onther page to do more question.</p>
+    <a name="Form and Comments">
+      <a href="apple.html" target="_blank">Go to Form and Comments page</a>
   </body>
 </html>
