--- a/apple.html
+++ b/apple.html
@@ -6,6 +6,12 @@
     <title>20032537d_FungTsunHin_midproject2</title>
   </head>
   <body>
-    <h1>123test</h1>
+    <h1>Form and Comments</h1>
+    <p>Welcome to forms and comments page. There are some question below that you can answer and fill the comment for this assignment. Thank you.</p>
+    <form action="20032537d@connect.polyu.hk"  method="post">
+      <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
+      <input type="text" id="wname" name="wname"><br>
+      <input type="submit" value="Submit">
+      </form>
   </body>
 </html>
