--- a/apple.html
+++ b/apple.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Form and Comments</h1>
     <p>Welcome to forms and comments page. There are some question below that you can answer and fill the comment for this assignment. Thank you.</p>
-    <form action="20032537d@connect.polyu.hk"  method="post">
+    <form action="tsunhin.fung@connect.polyu.hk"  method="post">
       <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
       <input type="text" id="wname" name="wname"><br>
       <input type="submit" value="Submit">
