--- a/apple.html
+++ b/apple.html
@@ -8,10 +8,14 @@
   <body>
     <h1>Form and Comments</h1>
     <p>Welcome to forms and comments page. There are some question below that you can answer and fill the comment for this assignment. Thank you.</p>
-    <form action="tsunhin.fung@connect.polyu.hk"  method="post">
+    <form action="mailto:20032537d@connect.polyu.hk"  method="post" enctype="text/plain">
       <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
       <input type="text" id="wname" name="wname"><br>
+      <textarea name="a_comment" rows="5" cols="30">
+        You can type it here.
+        </textarea>
       <input type="submit" value="Submit">
+      <input type="reset" value="Reset">
       </form>
   </body>
 </html>
