--- a/apple.html
+++ b/apple.html
@@ -12,6 +12,7 @@
       <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
       <input type="text" id="wname" name="wname"><br>
       <br>
+      <label for="comment"><b><ins>Please input your comment:</ins><b></label><br>
       <textarea name="a_comment" rows="5" cols="30">You can type it here.</textarea>
       <br>
       <input type="submit" value="Submit">
