--- a/apple.html
+++ b/apple.html
@@ -12,6 +12,13 @@
       <label for="wname"><b><ins>Please input your name:</ins><b></label><br>
       <input type="text" id="wname" name="wname"><br>
       <br>
+      <label for="wname"><b><ins>Please select one or more transportation that you like:</ins><b></label><br>
+      <input type="checkbox" id="Transportation1" name="Transportation1" value="Bus">
+      <label for="Transportation1"> I I like to use Bus for transportation</label><br>
+      <input type="checkbox" id="Transportation2" name="Transportation2" value="Private car">
+      <label for="Transportation2"> I I like to use private car for transportation</label><br>
+      <input type="checkbox" id="Transportation3" name="Transportation3" value="Mtr">
+      <label for="Transportation3"> I like to use MTR for transportation</label>
       <label for="comment"><b><ins>Please input your comment:</ins><b></label><br>
       <textarea name="a_comment" rows="5" cols="30">You can type it here.</textarea>
       <br>
