--- a/apple.html
+++ b/apple.html
@@ -3,6 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" media="screen" href="style2.css">
     <title>20032537d_FungTsunHin_midproject2</title>
   </head>
   <body>
