--- a/index.html
+++ b/index.html
@@ -191,6 +191,6 @@
     </table>
     <br>
     <a name="Form and Comments">
-      <a href="apple.html" target="_blank">Go to Form and Comments page</a>
+      <h1><a href="apple.html" target="_blank">Go to Form and Comments page</a></h1>
   </body>
 </html>
