--- a/apple.html
+++ b/apple.html
@@ -19,7 +19,7 @@
       <input type="checkbox" id="Transportation2" name="Transportation2" value="Private car">
       <label for="Transportation2"> I I like to use private car for transportation</label><br>
       <input type="checkbox" id="Transportation3" name="Transportation3" value="Mtr">
-      <label for="Transportation3"> I like to use MTR for transportation</label><br>
+      <label for="Transportation3"> I like to use MTR for transportation</label><br><br>
       <label for="comment"><b><ins>Please input your comment:</ins><b></label><br>
       <textarea name="a_comment" rows="5" cols="30">You can type it here.</textarea>
       <br>
