--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <td></td>
      <td></td>
      <td></td>
-     <td rowspan="4" class="lessons">COMP 3421 L</td>
+     <td rowspan="4" class="lessons1">COMP 3421 L</td>
      <td></td>
     </tr>
     <tr>
@@ -85,7 +85,7 @@
       <td></td>
       <td></td>
       <td></td>
-      <td rowspan="2" class="lessons">COMP 3421 T</td>
+      <td rowspan="2" class="lessons1">COMP 3421 T</td>
     </tr>
      <tr>
        <td>1100-1130</td>
@@ -98,7 +98,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td rowspan="2" class="lessons">AMA 2222A T</td>
+        <td rowspan="2" class="lessons2">AMA 2222A T</td>
         <td></td>
       </tr>
      <tr>
@@ -142,10 +142,10 @@
       </tr>
      <tr>
        <td>1430-1500</td>
-       <td rowspan="4" class="lessons">ELC 3124</td>
+       <td rowspan="4" class="lessons3">ELC 3124</td>
        <td></td>
        <td></td>
-       <td rowspan="6" class="lessons">AAE1B01</td>
+       <td rowspan="6" class="lessons4">AAE1B01</td>
        <td></td>
       </tr>
      <tr>
@@ -156,7 +156,7 @@
       </tr>
      <tr>
        <td>1530-1600</td>
-       <td rowspan="6" class="lessons">COMP3134</td>
+       <td rowspan="6" class="lessons5">COMP3134</td>
        <td></td>
        <td></td>
       </tr>
@@ -169,7 +169,7 @@
        <td>1630-1700</td>
        <td></td>
        <td></td>
-       <td rowspan="4" class="lessons">AMA 2222A L</td>
+       <td rowspan="4" class="lessons2">AMA 2222A L</td>
       </tr>
      <tr>
        <td>1700-1730</td>
