--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Name: Fung Tsun Hin</p>
     <p>Student ID: 20032537d</p>
     <h1><b>Shortcut:</b></h1>
-    <ol>
+    <ol class="a">
       <li><a href="#Photo">Photo</a><br></li>
       <li><a href="#Introduction">Introduction</a><br></li>
       <li><a href="#Anime List">Anime List</a><br></li>
@@ -31,7 +31,7 @@
       <p>Let's talk about topics not related to learning. On the above, you can see a <ins>turtle picture and video</ins> that is my favourite animal. Also, I love watching anime. There is some anime that i love. I will show it below in a list.</p>
     <a name="Anime List">
     <h1>My favourite anime list:</h1>
-    <ul>
+    <ul class="b">
       <li><a href="https://en.wikipedia.org/wiki/Your_Lie_in_April" target="_blank">Your lie in April</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Accel_World" target="_blank">Accel World</a></li>
       <li><a href="https://en.wikipedia.org/wiki/My_Hero_Academia" target="_blank">My Hero Academia</a></li>
