--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ol>
     <a name="Photo">
     <h1>Photo</h1>
-    <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo">
+    <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo" width="300" height="300">
     <map name="turtlevideo">
     <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic"><br>
     <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture on the above.</a>
