--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>COMP 3421 Mid Project</h1>
-    <p>Name: Fung Tsun Hin</p>
-    <p>Student ID: 20032537d</p>
+    <p class="personal">Name: Fung Tsun Hin</p>
+    <p class="personal">Student ID: 20032537d</p>
     <h1><b>Shortcut:</b></h1>
     <ol class="a">
       <li><a href="#Photo">Photo</a><br></li>
