--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>20032537d_FungTsunHin_midproject</title>
   </head>
   <body>
-    <h1>COMP 3421 Mid Project</h1>
+    <h1 class="center">COMP 3421 Mid Project</h1>
     <p class="personal">Name: Fung Tsun Hin</p>
     <p class="personal">Student ID: 20032537d</p>
     <h1><b>Shortcut:</b></h1>
@@ -39,6 +39,7 @@
     </ul>
     <p><mark>If you are interesting in this, you can click it to get more information on the wikipedia.<mark></p>
     <a name="Timetable">
+    <div class="center">
     <h1>My Timetable 2020-2021 Semester 2</h1>
     <table>
     <tr>
@@ -189,6 +190,7 @@
        <td></td>
       </tr>
     </table>
+      </div>
     <br>
     <a name="Form and Comments">
       <h1><a href="apple.html" target="_blank">Go to Form and Comments page</a></h1>
