--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="Sea_Turtle.jpg" alt="My picture" usemap="#turtlevideo" width="300" height="300">
     <map name="turtlevideo">
     <area shape="rect" coords="0,0,640,480" alt="Video of turtle" href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic"><br>
-    <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the picture on the above.</a>
+    <a href="https://www.youtube.com/watch?v=5Rmv3nliwCs&ab_channel=NationalGeographic" title="Go to watch turtle video" target="_blank">You can watch turtle video through this link or click the turtle on the left.</a>
     <a name="Introduction">
     <h1>Introduction</h1>
     <p class="introduction">My name is Fung Tsun Hin. I am a year 3 student of <i>Department of Applied Mathematics</i>. <b>I am studing <q>Bachelor of science in Data Science and Analytics</q>.</b> I choose <mark>COMP 3421</mark> to study because I am quite like coding and want to know more Web development.
